# MathLib

./: CMakeLists.txt
MathLib/: CMakeLists.txt  MathLib.cpp  MathLib.h
MathLib/LinearAlgebra/: Complex.cpp  Complex.h  Matrix.h  Vector.h
MathLib/Vector/: Vector.h
MathLib/matrix/: Matrix.h
